# ge-axis-finder

./: .gitignore  Makefile.in  README  config.status  configure  configure.ac  logon.C  main.cxx  runall.pl  runall_forplots.pl  runall_forplots2.pl  runall_top.pl
doc/: AxisFindercfg
inc/: TAxisFinder.h
ini/: Side_Run07_Th_0.58_newMC.ini  Side_Run07_Th_2.61_newMC.ini  Top_Run06_Co_1.17_newMC.ini  Top_Run06_Co_1.17_newMC_syst.ini  Top_Run06_Co_1.33_newMC.ini  Top_Run06_Co_1.33_newMC_syst.ini  Top_Run06_Co_1.33_newMC_syst_5mmoff_45deg.ini  Top_Run06_Co_1.33_newMC_syst_5mmoff_90deg.ini  Top_Run06_Co_1.33_newMC_syst_imp0.0_0.35.ini  Top_Run06_Th_0.58_Background.ini  Top_Run06_Th_0.58_newMC.ini  Top_Run06_Th_2.61_Background.ini  Top_Run06_Th_2.61_newMC.ini  Top_Run06_Th_2.61_newMC_syst_5mmoff_45deg.ini  Top_Run06_Th_2.61_newMC_syst_5mmoff_90deg.ini  Top_Run07_Th_0.58_Background.ini  Top_Run07_Th_0.58_newMC.ini  Top_Run07_Th_2.61_Background.ini  Top_Run07_Th_2.61_newMC.ini
livetime/: Run06_Th228_livetime.txt  Run06_background_livetime.txt  Run07_Th228_livetime.txt  Run07_background_livetime.txt
proof/: LinkDef.h  MyOutputParameters.h  MyParameters.h  TDataOccSelector.C  TDataOccSelector.h  TMCOccSideSelector.C  TMCOccSideSelector.h  TMCOccTopSelector.C  TMCOccTopSelector.h
scripts/: CalcFitChi2.cxx  CalcFitChi2_ensembletest.cxx  FitChi2.cxx  GetCanvas.cxx  GetCanvas_combine3layers.cxx  GetCanvas_combine_5mmoff.cxx  PlotDataSpectrum.cxx  PlotDataSpectrum_forIris.cxx  PlotEfficiency.cxx  PlotOccInData.cxx  README  SumWithWeights.cxx  ensemble_read.cxx  (+2 more)
(+30 files in other folders)
